--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -175,15 +175,6 @@
   <data name="canada" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>canada.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="live__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>live (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="mp4__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>mp4 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="streamed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>streamed.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="assisstant" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>assisstant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -301,10 +292,19 @@
   <data name="skipForward" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>skipForward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Skip_next" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Skip-next.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="live" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>live.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Skip_prev" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Skip-prev.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nextVideo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>nextVideo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="previousVideo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>previousVideo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="recordedVideo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>recordedVideo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stream" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>stream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
