--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -349,6 +349,12 @@
   <data name="downarrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>downarrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="openwindow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>openwindow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="openWindowSideways" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>openWindowSideways.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="temp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>temp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
