--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -313,9 +313,6 @@
   <data name="cooking" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>cooking.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="livingroomButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>livingroomButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="repeatOne" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>repeatOne.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -363,5 +360,8 @@
   </data>
   <data name="windowPic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>windowPic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="humidity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>humidity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
