--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -301,9 +301,6 @@
   <data name="cancelCall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>cancelCall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fanOn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>fanOn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="callAgainButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>callAgainButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -366,5 +363,17 @@
   </data>
   <data name="blinds" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>blinds.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bulbDim" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>bulbDim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fanHigh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>fanHigh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fanLow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>fanLow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fanMedium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>fanMedium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
