--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -412,4 +412,10 @@
   <data name="OpenDoor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OpenDoor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BlindsClosedOpenSlats" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>BlindsClosedOpenSlats.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="elevator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>elevator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
