assistance bugs fixed

--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -421,4 +421,7 @@
   <data name="rejectVisitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>rejectVisitor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="upArrowAssistance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>upArrowAssistance.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
